--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Join Us</title>
   
+  <!-- CSS File link and Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css" />
 
   <!-- Favicon Link -->
