--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div id="list-container " class="main-container container-fluid">
       <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
-  <h2 class="text-center ml-5" style="  font-family: Montserrat, sans-serif";>Our Contributors</h2>
+  <h2 class="text-center ml-5" style="  font-family: Montserrat, sans-serif";>Contributors</h2>
   <br>
   <div id="contributors"  class="contri_Flex mb-5"></div>
   <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
