--- a/index.html
+++ b/index.html
@@ -1,40 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Meta tag is used for providing information to the Search Engines -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Join Us</title>
 
-<head>
-  <!-- Meta tag is used for providing information to the Search Engines -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Join Us</title>
-  
-  <!-- CSS File link and Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/main.css" />
+    <!-- CSS File link and Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/main.css" />
 
-  <!-- Favicon Link -->
-  <link rel="shortcut icon" href="images/logo.png" type="image/PNG" />
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" href="images/logo.png" type="image/PNG" />
+  </head>
 
-</head>
-
-<body>
-
-  <div id="list-container " class="main-container container-fluid">
+  <body>
+    <div id="list-container " class="main-container container-fluid">
       <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
-  <h2 class="text-center ml-5" style="  font-family: Montserrat, sans-serif";>Our Contributors</h2>
-  <br>
-  <div id="contributors"  class="contri_Flex mb-5"></div>
-  <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
-  </div>
+      <h2 class="text-center ml-5" style="font-family: Montserrat, sans-serif">
+        Our Contributors
+      </h2>
+      <br />
 
-  <!-- Bootstrap js files -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  <!-- Main JS File Link -->
-  <script src="js/main.js"></script>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis labore,
+        quam reiciendis natus sed, commodi cumque beatae repudiandae libero
+        atque sit, consectetur voluptate odio modi. Saepe vitae atque,
+        architecto dolorum natus repudiandae neque veniam nostrum voluptatum
+        commodi in dolor facilis eos quia. Corporis nam mollitia sunt eaque,
+        nobis aperiam maiores hic incidunt blanditiis dolor id alias saepe
+        iusto, cumque optio debitis ullam ipsa vitae ipsum unde reprehenderit.
+        Hic ut sequi modi harum aspernatur commodi vitae. Fuga porro omnis
+        dignissimos, perspiciatis tenetur consectetur voluptas harum in. Esse
+        voluptatibus, illo labore blanditiis iste alias. Magnam sit perferendis
+        harum cumque ipsam animi architecto illum aliquid assumenda doloremque
+        optio commodi omnis similique ipsum iusto atque, inventore possimus
+        asperiores neque voluptatum tenetur expedita temporibus! Corrupti
+        delectus pariatur nemo rerum impedit consequatur aliquam beatae?
+        Voluptatum necessitatibus enim sint eligendi veniam molestias facilis,
+        recusandae accusamus sit repudiandae deserunt dicta impedit obcaecati
+        perferendis. Inventore praesentium labore, iusto totam illum veritatis,
+        illo expedita, cupiditate optio fuga modi voluptates. Magni magnam
+        perferendis aperiam laudantium ratione recusandae maxime consectetur
+        dolor ipsam ex rem distinctio quas, amet dolorem harum iusto pariatur
+        minima et sint saepe? Recusandae exercitationem dolore modi totam
+        nesciunt nihil dicta odit impedit. Cumque fugit iusto mollitia magnam
+        doloremque, minus ad suscipit provident enim nam alias ipsum dolore
+        quidem. Alias ab, fugit, deleniti nostrum vitae voluptates ipsum quidem
+        sapiente culpa optio dolores et reprehenderit fugiat perferendis libero
+        ipsam corrupti impedit aut, facilis nam recusandae esse similique omnis.
+        Maiores, esse sed perferendis quidem corrupti eum soluta atque labore
+        non eaque nulla dolorum quos pariatur cupiditate repellendus nobis
+        tempore placeat ad error, natus facilis rem harum dolorem enim. Nulla
+        dolores sint asperiores perspiciatis nostrum quibusdam fugiat. Sunt, at
+        inventore eveniet nam dolore, perspiciatis repudiandae exercitationem
+        alias quia ipsa suscipit excepturi, quidem corrupti nisi in beatae
+        aspernatur voluptas corporis quo. Culpa blanditiis error accusantium
+        distinctio repellat voluptas perspiciatis pariatur aperiam esse sunt
+        corporis amet labore minima repudiandae libero eaque atque voluptates
+        placeat possimus, porro inventore? Eius saepe id voluptatum nam eaque
+        neque blanditiis veritatis tempore est quos nisi non in harum aspernatur
+        quis corporis sint facilis voluptates voluptatem architecto nulla, ipsum
+        perferendis exercitationem? Fugiat minus laudantium quis eos aliquam ab
+        neque incidunt sed, corrupti, omnis ut dignissimos necessitatibus
+        voluptates placeat! Quas laborum molestias perferendis nostrum tenetur
+        facere unde deserunt repellendus sit illo beatae facilis cupiditate,
+        assumenda earum dolorum! Vel quam eos delectus voluptatum voluptates
+        dolores minus similique? Earum fugit perferendis quo qui libero debitis
+        quae delectus cumque sed, labore ipsam voluptates maxime distinctio
+        ipsum a quaerat error, tempora ex. Minus alias perferendis modi nesciunt
+        quas blanditiis vel doloremque quasi, cumque ad aperiam maxime porro
+        quo, sapiente, consequuntur quisquam eos delectus harum voluptas animi
+        sint dolore? Corporis sunt magni amet alias molestias, officiis
+        veritatis consequuntur fugit doloribus, unde, eum expedita at quis
+        repellat provident laudantium esse nemo facilis voluptate adipisci
+        incidunt reiciendis iure rem reprehenderit! Aspernatur voluptates maxime
+        nemo aut asperiores mollitia? Ratione dicta repellendus mollitia
+        voluptates consectetur possimus cumque ducimus libero blanditiis minus
+        doloribus tenetur reiciendis, eaque molestiae odit optio et fugit! Quam?
+      </p>
 
+      <div id="contributors" class="contri_Flex mb-5"></div>
+      <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
+    </div>
 
-</body>
-
+    <!-- Bootstrap js files -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Main JS File Link -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
