--- a/index.html
+++ b/index.html
@@ -21,73 +21,47 @@
   <body>
     <div id="list-container " class="main-container container-fluid">
       <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
-  <h2 class="text-center ml-5" style="  font-family: Montserrat, sans-serif";>Contributors</h2>
-  <br>
-  <div id="contributors"  class="contri_Flex mb-5"></div>
-  <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
-  </div>
+
+      <h2
+        class="text-center ml-5"
+        style="font-family: Montserrat, sans-serif"
+        ;
+      >
+        Contributors
+      </h2>
+      <br />
 
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis labore,
-        quam reiciendis natus sed, commodi cumque beatae repudiandae libero
-        atque sit, consectetur voluptate odio modi. Saepe vitae atque,
-        architecto dolorum natus repudiandae neque veniam nostrum voluptatum
-        commodi in dolor facilis eos quia. Corporis nam mollitia sunt eaque,
-        nobis aperiam maiores hic incidunt blanditiis dolor id alias saepe
-        iusto, cumque optio debitis ullam ipsa vitae ipsum unde reprehenderit.
-        Hic ut sequi modi harum aspernatur commodi vitae. Fuga porro omnis
-        dignissimos, perspiciatis tenetur consectetur voluptas harum in. Esse
-        voluptatibus, illo labore blanditiis iste alias. Magnam sit perferendis
-        harum cumque ipsam animi architecto illum aliquid assumenda doloremque
-        optio commodi omnis similique ipsum iusto atque, inventore possimus
-        asperiores neque voluptatum tenetur expedita temporibus! Corrupti
-        delectus pariatur nemo rerum impedit consequatur aliquam beatae?
-        Voluptatum necessitatibus enim sint eligendi veniam molestias facilis,
-        recusandae accusamus sit repudiandae deserunt dicta impedit obcaecati
-        perferendis. Inventore praesentium labore, iusto totam illum veritatis,
-        illo expedita, cupiditate optio fuga modi voluptates. Magni magnam
-        perferendis aperiam laudantium ratione recusandae maxime consectetur
-        dolor ipsam ex rem distinctio quas, amet dolorem harum iusto pariatur
-        minima et sint saepe? Recusandae exercitationem dolore modi totam
-        nesciunt nihil dicta odit impedit. Cumque fugit iusto mollitia magnam
-        doloremque, minus ad suscipit provident enim nam alias ipsum dolore
-        quidem. Alias ab, fugit, deleniti nostrum vitae voluptates ipsum quidem
-        sapiente culpa optio dolores et reprehenderit fugiat perferendis libero
-        ipsam corrupti impedit aut, facilis nam recusandae esse similique omnis.
-        Maiores, esse sed perferendis quidem corrupti eum soluta atque labore
-        non eaque nulla dolorum quos pariatur cupiditate repellendus nobis
-        tempore placeat ad error, natus facilis rem harum dolorem enim. Nulla
-        dolores sint asperiores perspiciatis nostrum quibusdam fugiat. Sunt, at
-        inventore eveniet nam dolore, perspiciatis repudiandae exercitationem
-        alias quia ipsa suscipit excepturi, quidem corrupti nisi in beatae
-        aspernatur voluptas corporis quo. Culpa blanditiis error accusantium
-        distinctio repellat voluptas perspiciatis pariatur aperiam esse sunt
-        corporis amet labore minima repudiandae libero eaque atque voluptates
-        placeat possimus, porro inventore? Eius saepe id voluptatum nam eaque
-        neque blanditiis veritatis tempore est quos nisi non in harum aspernatur
-        quis corporis sint facilis voluptates voluptatem architecto nulla, ipsum
-        perferendis exercitationem? Fugiat minus laudantium quis eos aliquam ab
-        neque incidunt sed, corrupti, omnis ut dignissimos necessitatibus
-        voluptates placeat! Quas laborum molestias perferendis nostrum tenetur
-        facere unde deserunt repellendus sit illo beatae facilis cupiditate,
-        assumenda earum dolorum! Vel quam eos delectus voluptatum voluptates
-        dolores minus similique? Earum fugit perferendis quo qui libero debitis
-        quae delectus cumque sed, labore ipsam voluptates maxime distinctio
-        ipsum a quaerat error, tempora ex. Minus alias perferendis modi nesciunt
-        quas blanditiis vel doloremque quasi, cumque ad aperiam maxime porro
-        quo, sapiente, consequuntur quisquam eos delectus harum voluptas animi
-        sint dolore? Corporis sunt magni amet alias molestias, officiis
-        veritatis consequuntur fugit doloribus, unde, eum expedita at quis
-        repellat provident laudantium esse nemo facilis voluptate adipisci
-        incidunt reiciendis iure rem reprehenderit! Aspernatur voluptates maxime
-        nemo aut asperiores mollitia? Ratione dicta repellendus mollitia
-        voluptates consectetur possimus cumque ducimus libero blanditiis minus
-        doloribus tenetur reiciendis, eaque molestiae odit optio et fugit! Quam?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+        corporis eius, fuga nam enim dolore vitae eligendi beatae ipsum eveniet
+        amet atque iure nobis reiciendis unde, deleniti neque mollitia, est
+        porro esse recusandae. Qui quaerat reiciendis accusamus incidunt, velit
+        doloremque aliquid nostrum modi, animi et praesentium eveniet, iure
+        temporibus tempore nesciunt. Molestias alias assumenda sint neque
+        doloremque dicta error nobis molestiae eveniet, quisquam, voluptates
+        cupiditate, amet ullam necessitatibus illum corrupti reiciendis quod
+        animi culpa expedita! Nam perferendis iusto repudiandae officiis beatae
+        praesentium? Sint et sapiente possimus explicabo at laudantium odit eos.
+        Accusamus ducimus rem explicabo doloribus magni omnis soluta, adipisci
+        nostrum mollitia enim dignissimos et laborum odit possimus harum iusto
+        repellat sit quibusdam facilis earum? Minus, alias numquam non facilis
+        dolorum ab sequi consequatur ratione minima, officiis ipsam, similique
+        harum eius omnis veritatis quod? Est saepe laboriosam voluptatibus esse
+        ut ea nam consectetur recusandae quo quis, aut temporibus praesentium
+        quam facere! Odit quas itaque nisi aliquid consequatur! Suscipit placeat
+        sint vitae sapiente obcaecati asperiores adipisci voluptatibus! Cumque
+        omnis sapiente tenetur nisi inventore quibusdam. Aliquid vero, iure
+        labore soluta minus fuga rem sapiente dolor voluptatem, pariatur rerum
+        saepe magni dolorum itaque sequi dignissimos quo officia aliquam nisi
+        eveniet. Consectetur, cupiditate sunt!
       </p>
 
       <div id="contributors" class="contri_Flex mb-5"></div>
       <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
     </div>
+
+    <div id="contributors" class="contri_Flex mb-5"></div>
+    <!-- WARNING,WARNING!!! Dont delete the div, needed to list contributors -->
 
     <!-- Bootstrap js files -->
     <script
